# asus-rog-touchpad-driver

./: .SRCINFO  .gitignore  Cargo.toml  PKGBUILD  PKGBUILD.local  README.md  asus-rog-touchpad-numpad.install  asus-rog-touchpad.service  justfile
src/: cli.rs  error.rs  main.rs
src/device/: detection.rs  mod.rs
src/i2c/: led.rs  mod.rs
src/input/: mod.rs  touchpad.rs  virtual_keyboard.rs
src/layouts/: g634jy.rs  mod.rs
src/numpad/: mod.rs  state.rs
